--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "bcrypt": "^5.1.0",
     "mongoose": "^6.8.4",
     "next": "13.1.4",
-    "openai": "^3.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
