--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.4",
     "bcrypt": "^5.1.0",
     "mongoose": "^6.8.4",
