--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
   "root": true,
   "extends": ["next/core-web-vitals"],
-  "plugins": ["testing-library"],
+  "plugins": [
+    "eslint:recommended",
+    "plugin:jest/recommended",
+    "plugin:jest/style",
+    "plugin:testing-library/react"
+  ],
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
@@ -9,7 +14,11 @@
         "**/__tests__/**/*.[jt]s?(x)",
         "**/?(*.)+(spec|test).[jt]s?(x)"
       ],
-      "extends": ["plugin:testing-library/react"]
+      "extends": [
+        "plugin:jest/recommended",
+        "plugin:jest/style",
+        "plugin:testing-library/react"
+      ]
     }
   ]
 }
