--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.5",
+    "@types/whatwg-fetch": "^0.0.33",
     "bcrypt": "^5.1.0",
-    "mongoose": "^6.8.4",
+    "mongoose": "^6.9.0",
     "next": "13.1.5",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
@@ -22,7 +23,8 @@
     "swr": "^2.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/dom": "8.20.0",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/bcrypt": "^5.0.0",
@@ -30,12 +32,15 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "@types/testing-library__jest-dom": "5.14.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-testing-library": "^5.10.0",
     "jest": "^29.4.0",
-    "jest-environment-jsdom": "29.4.0",
-    "typescript": "4.9.4"
+    "jest-environment-jsdom": "^29.4.0",
+    "msw": "^1.0.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "4.9.4",
+    "whatwg-fetch": "^3.6.2"
   }
 }
