--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "13.1.5",
     "@types/whatwg-fetch": "^0.0.33",
     "bcrypt": "^5.1.0",
+    "jest-fetch-mock": "^3.0.3",
     "mongoose": "^6.9.0",
     "next": "13.1.5",
     "next-auth": "^4.18.10",
