--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.5",
-    "@types/whatwg-fetch": "^0.0.33",
     "bcrypt": "^5.1.0",
-    "jest-fetch-mock": "^3.0.3",
     "mongoose": "^6.9.0",
     "next": "13.1.5",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.1"
+    "swr": "^2.0.2"
   },
   "devDependencies": {
     "@testing-library/dom": "8.20.0",
@@ -37,11 +35,10 @@
     "eslint-config-next": "13.1.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-testing-library": "^5.10.0",
-    "jest": "^29.4.0",
-    "jest-environment-jsdom": "^29.4.0",
-    "msw": "^1.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^29.0.5",
-    "typescript": "4.9.4",
-    "whatwg-fetch": "^3.6.2"
+    "typescript": "4.9.4"
   }
 }
