--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,7 @@
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
-      "files": [
-        "**/__tests__/**/*.[jt]s?(x)",
-        "**/?(*.)+(spec|test).[jt]s?(x)"
-      ],
+      "files": ["**/tests/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
       "extends": [
         "plugin:jest/recommended",
         "plugin:jest/style",
