--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,12 @@
 {
   "root": true,
   "extends": ["next/core-web-vitals"],
-  "plugins": [
-    "eslint:recommended",
-    "plugin:jest/recommended",
-    "plugin:jest/style",
-    "plugin:testing-library/react"
-  ],
+  "plugins": ["testing-library"],
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
       "files": ["**/tests/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
-      "extends": [
-        "plugin:jest/recommended",
-        "plugin:jest/style",
-        "plugin:testing-library/react"
-      ]
+      "extends": ["plugin:testing-library/react"]
     }
   ]
 }
