--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-OPENAI_API_KEY=
+NEXTAUTH_URL=
+NEXT_PUBLIC_NEXTAUTH_URL=
+# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_SECRET=
 MONGODB_URI=
+GOOGLE_ID=
+GOOGLE_SECRET=
+OPENAI_API_KEY=
