--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
+API_URL=
+
+# auth
 NEXTAUTH_URL=
 NEXT_PUBLIC_NEXTAUTH_URL=
-# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+# generate with linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 NEXTAUTH_SECRET=
 MONGODB_URI=
 GOOGLE_ID=
 GOOGLE_SECRET=
 OPENAI_API_KEY=
+
+# stripe
+STRIPE_SECRET_KEY=
+STRIPE_SECRET_KEY_TEST=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_TEST=
