--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
     "next-auth": "^4.19.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^11.8.0",
     "swr": "^2.0.3"
   },
   "devDependencies": {
