--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "mongoose": "^6.9.0",
-    "next": "13.1.6",
-    "next-auth": "^4.19.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "^11.8.0",
+    "next": "^13.1.6",
+    "next-auth": "^4.19.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^11.9.0",
     "swr": "^2.0.3"
   },
   "devDependencies": {
-    "@testing-library/dom": "8.20.0",
-    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "^13.1.6",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-testing-library": "^5.10.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^29.0.5",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   }
 }
