--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint-staged": "lint-staged",
+    "prettier": "prettier --write --ignore-unknown .",
+    "prettier:check": "prettier --check --ignore-unknown .",
     "test": "jest --watch",
     "test:ci": "jest --ci"
+  },
+  "git": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
@@ -20,8 +29,7 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stripe": "^11.9.0",
-    "swr": "^2.0.3"
+    "stripe": "^11.9.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
@@ -29,10 +37,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.11.19",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
     "eslint-plugin-jest": "^27.2.1",
@@ -40,6 +49,11 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-fetch-mock": "^3.0.3",
+    "lint-staged": "13.1.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
