Configure tailwind to use Inter font

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.9",
+    "@heroicons/react": "^2.0.14",
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@next/font": "^13.1.6",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "mongoose": "^6.9.0",
