--- a/package.json
+++ b/package.json
@@ -7,32 +7,33 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint-staged": "lint-staged",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "test": "jest --watch",
     "test:ci": "jest --ci"
-  },
-  "git": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "^13.1.6",
+    "@radix-ui/react-popover": "^1.0.3",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
+    "@vercel/analytics": "^0.1.8",
+    "classnames": "^2.3.2",
+    "focus-trap-react": "^10.0.2",
+    "framer-motion": "^9.0.1",
+    "lucide-react": "^0.109.0",
     "mongoose": "^6.9.0",
     "next": "^13.1.6",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stripe": "^11.9.1"
+    "react-wrap-balancer": "^0.4.0",
+    "stripe": "^11.9.1",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
@@ -52,7 +53,6 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "13.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
