--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "^13.1.6",
     "@radix-ui/react-popover": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.2",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@vercel/analytics": "^0.1.8",
     "classnames": "^2.3.2",
     "focus-trap-react": "^10.0.2",
-    "framer-motion": "^9.0.1",
+    "framer-motion": "^8.4.2",
     "lucide-react": "^0.109.0",
     "mongoose": "^6.9.0",
-    "next": "^13.1.6",
-    "next-auth": "^4.19.2",
+    "next": "^13.1.1",
+    "next-auth": "^4.18.2",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-wrap-balancer": "^0.4.0",
+    "react-wrap-balancer": "^0.3.0",
     "stripe": "^11.9.1",
     "swr": "^2.0.3"
   },
