--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "framer-motion": "8.4.2",
     "lucide-react": "0.105.0-alpha.4",
     "mongoose": "6.9.1",
-    "next-auth": "4.18.8",
+    "next-auth": "^4.18.8",
     "next": "13.1.1",
     "nodemailer": "6.9.1",
     "react-dom": "18.2.0",
