--- a/package.json
+++ b/package.json
@@ -1,70 +1,49 @@
 {
   "name": "penpal",
-  "version": "0.2.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prettier": "prettier --write --ignore-unknown .",
-    "prettier:check": "prettier --check --ignore-unknown .",
-    "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.10",
-    "@next-auth/mongodb-adapter": "1.1.1",
-    "@next/font": "13.1.1",
-    "@radix-ui/react-popover": "1.0.2",
-    "@radix-ui/react-tooltip": "1.0.2",
-    "@stripe/react-stripe-js": "1.16.4",
-    "@stripe/stripe-js": "1.46.0",
-    "@vercel/analytics": "0.1.6",
-    "@vercel/og": "0.0.26",
+    "@auth/prisma-adapter": "^1.0.2",
+    "@headlessui/react": "1.7.17",
+    "@prisma/client": "5.3.0",
+    "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-tooltip": "1.0.6",
+    "@stripe/react-stripe-js": "2.2.0",
+    "@stripe/stripe-js": "2.1.3",
+    "@vercel/analytics": "1.0.2",
+    "@vercel/og": "0.5.13",
+    "autoprefixer": "10.4.16",
     "classnames": "2.3.2",
-    "focus-trap-react": "10.0.2",
-    "framer-motion": "8.4.2",
-    "lucide-react": "0.105.0-alpha.4",
-    "mongoose": "6.9.1",
-    "next-auth": "^4.18.8",
-    "next": "13.1.1",
-    "nodemailer": "6.9.1",
-    "react-dom": "18.2.0",
-    "react-markdown": "8.0.4",
-    "react-wrap-balancer": "0.3.0",
+    "focus-trap-react": "10.2.1",
+    "framer-motion": "10.16.4",
+    "lucide-react": "0.276.0",
+    "next": "13.5.2",
+    "next-auth": "^4.23.1",
+    "nodemailer": "6.9.5",
+    "postcss": "8.4.30",
+    "prisma": "^5.3.0",
     "react": "18.2.0",
-    "stripe": "11.9.1",
-    "swr": "2.0.3",
-    "use-debounce": "9.0.3"
+    "react-dom": "18.2.0",
+    "react-wrap-balancer": "^1.1.0",
+    "stripe": "13.5.0",
+    "swr": "2.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "0.5.3",
-    "@tailwindcss/line-clamp": "0.4.2",
-    "@tailwindcss/typography": "0.5.9",
-    "@testing-library/dom": "8.20.0",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.4.0",
-    "@types/node": "18.11.18",
-    "@types/nodemailer": "6.4.7",
-    "@types/react-dom": "18.0.10",
-    "@types/react": "18.0.26",
-    "autoprefixer": "10.4.13",
-    "eslint-config-next": "13.1.6",
-    "eslint-plugin-jest": "27.2.1",
-    "eslint-plugin-testing-library": "5.10.0",
-    "eslint": "8.33.0",
-    "jest-environment-jsdom": "29.4.2",
-    "jest-fetch-mock": "3.0.3",
-    "jest": "29.4.2",
-    "concurrently": "7.6.0",
-    "postcss": "8.4.21",
-    "prettier-plugin-tailwindcss": "0.2.1",
-    "prettier": "2.8.2",
-    "tailwindcss": "3.2.4",
-    "ts-jest": "29.0.5",
-    "typescript": "4.9.4"
+    "@tailwindcss/forms": "0.5.6",
+    "@tailwindcss/typography": "0.5.10",
+    "@types/node": "20.6.3",
+    "@types/nodemailer": "6.4.10",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
